# C_Sandbox

./: .gitignore  CMakeLists.txt  README.md  main.c  ppr_prak1.c  ppr_prak1.h
docs/html/: dir_53da3538f9e6e58ac461ffd3b1b8c066.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b0ed093c3fb9fc29997b8aaa39df800.html  dir_a95b9d18e993bfc0480716d1b6d2048c.html  files.html  globals.html  globals_func.html  ppr__prak1_8h.html  ppr__prak1_8h_source.html  ppr__prak2_8h.html  ppr__prak2_8h_source.html  ppr__prak3_8h.html  ppr__prak3_8h_source.html  print__tasks_8h.html  print__tasks_8h_source.html
docs/html/search/: all_0.js  all_1.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js
docs/latex/: files.tex  ppr__prak1_8h.tex  ppr__prak1_8h_source.tex  ppr__prak2_8h.tex  ppr__prak2_8h_source.tex  ppr__prak3_8h.tex  ppr__prak3_8h_source.tex  print__tasks_8h.tex  print__tasks_8h_source.tex  refman.tex
src/: ppr_prak1.c  print_tasks.c  print_tasks.h
src/praktikum_1/: ppr_prak1.c
src/praktikum_2/: ppr_prak2.c  ppr_prak2.h
src/praktikum_3/: ppr_prak3.c  ppr_prak3.h
src/praktikum_4/: huffman.c  huffman.h  huffman_common.c  huffman_common.h  io.c  io.h  main.c  main.h
